R4NAK/Bindings/C/r4nak.h

/* Generated by R4LContractGen. Do not edit. */
#ifndef R4NAK_R4L_BINDING_H
#define R4NAK_R4L_BINDING_H

#include <stddef.h>
#include <stdint.h>
#include <r4os/r4l.h>

typedef struct R4NakHeader {
    uint32_t w0;
    uint32_t w1;
    uint32_t w2;
    uint32_t w3;
    uint32_t w4;
    uint32_t w5;
    uint32_t w6;
    uint32_t w7;
    uint32_t w8;
    uint32_t w9;
    uint32_t w10;
    uint32_t w11;
    uint32_t w12;
    uint32_t w13;
    uint32_t w14;
    uint32_t w15;
    uint32_t w16;
    uint32_t w17;
    uint32_t w18;
    uint32_t w19;
    uint32_t w20;
    uint32_t w21;
    uint32_t w22;
    uint32_t w23;
    uint32_t w24;
    uint32_t w25;
    uint32_t w26;
    uint32_t w27;
    uint32_t w28;
    uint32_t w29;
    uint32_t w30;
    uint32_t w31;
} R4NakHeader;
_Static_assert(sizeof(R4NakHeader) == 128u, "R4NakHeader size mismatch");
_Static_assert(offsetof(R4NakHeader, w0) == 0u, "R4NakHeader.w0 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w1) == 4u, "R4NakHeader.w1 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w2) == 8u, "R4NakHeader.w2 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w3) == 12u, "R4NakHeader.w3 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w4) == 16u, "R4NakHeader.w4 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w5) == 20u, "R4NakHeader.w5 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w6) == 24u, "R4NakHeader.w6 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w7) == 28u, "R4NakHeader.w7 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w8) == 32u, "R4NakHeader.w8 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w9) == 36u, "R4NakHeader.w9 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w10) == 40u, "R4NakHeader.w10 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w11) == 44u, "R4NakHeader.w11 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w12) == 48u, "R4NakHeader.w12 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w13) == 52u, "R4NakHeader.w13 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w14) == 56u, "R4NakHeader.w14 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w15) == 60u, "R4NakHeader.w15 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w16) == 64u, "R4NakHeader.w16 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w17) == 68u, "R4NakHeader.w17 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w18) == 72u, "R4NakHeader.w18 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w19) == 76u, "R4NakHeader.w19 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w20) == 80u, "R4NakHeader.w20 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w21) == 84u, "R4NakHeader.w21 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w22) == 88u, "R4NakHeader.w22 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w23) == 92u, "R4NakHeader.w23 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w24) == 96u, "R4NakHeader.w24 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w25) == 100u, "R4NakHeader.w25 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w26) == 104u, "R4NakHeader.w26 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w27) == 108u, "R4NakHeader.w27 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w28) == 112u, "R4NakHeader.w28 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w29) == 116u, "R4NakHeader.w29 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w30) == 120u, "R4NakHeader.w30 offset mismatch");
_Static_assert(offsetof(R4NakHeader, w31) == 124u, "R4NakHeader.w31 offset mismatch");

typedef struct R4NakDigest {
    uint64_t h0;
    uint64_t h1;
    uint64_t h2;
    uint64_t h3;
} R4NakDigest;
_Static_assert(sizeof(R4NakDigest) == 32u, "R4NakDigest size mismatch");
_Static_assert(offsetof(R4NakDigest, h0) == 0u, "R4NakDigest.h0 offset mismatch");
_Static_assert(offsetof(R4NakDigest, h1) == 8u, "R4NakDigest.h1 offset mismatch");
_Static_assert(offsetof(R4NakDigest, h2) == 16u, "R4NakDigest.h2 offset mismatch");
_Static_assert(offsetof(R4NakDigest, h3) == 24u, "R4NakDigest.h3 offset mismatch");

typedef struct R4NakRuntime {
    uint32_t version;
    uint32_t size;
    uint64_t user;
    uint64_t owner_generation;
    uint64_t allocate;
    uint64_t release;
    uint64_t clock_ns;
    uint64_t abort_worker;
    uint64_t owner_retired;
    uint64_t cancelled;
} R4NakRuntime;
_Static_assert(sizeof(R4NakRuntime) == 72u, "R4NakRuntime size mismatch");
_Static_assert(offsetof(R4NakRuntime, version) == 0u, "R4NakRuntime.version offset mismatch");
_Static_assert(offsetof(R4NakRuntime, size) == 4u, "R4NakRuntime.size offset mismatch");
_Static_assert(offsetof(R4NakRuntime, user) == 8u, "R4NakRuntime.user offset mismatch");
_Static_assert(offsetof(R4NakRuntime, owner_generation) == 16u, "R4NakRuntime.owner_generation offset mismatch");
_Static_assert(offsetof(R4NakRuntime, allocate) == 24u, "R4NakRuntime.allocate offset mismatch");
_Static_assert(offsetof(R4NakRuntime, release) == 32u, "R4NakRuntime.release offset mismatch");
_Static_assert(offsetof(R4NakRuntime, clock_ns) == 40u, "R4NakRuntime.clock_ns offset mismatch");
_Static_assert(offsetof(R4NakRuntime, abort_worker) == 48u, "R4NakRuntime.abort_worker offset mismatch");
_Static_assert(offsetof(R4NakRuntime, owner_retired) == 56u, "R4NakRuntime.owner_retired offset mismatch");
_Static_assert(offsetof(R4NakRuntime, cancelled) == 64u, "R4NakRuntime.cancelled offset mismatch");

typedef struct R4NakRequest {
    uint32_t version;
    uint32_t size;
    uint64_t words;
    uint32_t word_count;
    uint32_t stage;
    uint32_t sm;
    uint32_t entry_length;
    uint64_t entry;
    uint64_t budget_bytes;
    uint64_t deadline_ns;
    uint64_t code;
    uint64_t code_capacity;
    uint64_t log;
    uint64_t log_capacity;
} R4NakRequest;
_Static_assert(sizeof(R4NakRequest) == 88u, "R4NakRequest size mismatch");
_Static_assert(offsetof(R4NakRequest, version) == 0u, "R4NakRequest.version offset mismatch");
_Static_assert(offsetof(R4NakRequest, size) == 4u, "R4NakRequest.size offset mismatch");
_Static_assert(offsetof(R4NakRequest, words) == 8u, "R4NakRequest.words offset mismatch");
_Static_assert(offsetof(R4NakRequest, word_count) == 16u, "R4NakRequest.word_count offset mismatch");
_Static_assert(offsetof(R4NakRequest, stage) == 20u, "R4NakRequest.stage offset mismatch");
_Static_assert(offsetof(R4NakRequest, sm) == 24u, "R4NakRequest.sm offset mismatch");
_Static_assert(offsetof(R4NakRequest, entry_length) == 28u, "R4NakRequest.entry_length offset mismatch");
_Static_assert(offsetof(R4NakRequest, entry) == 32u, "R4NakRequest.entry offset mismatch");
_Static_assert(offsetof(R4NakRequest, budget_bytes) == 40u, "R4NakRequest.budget_bytes offset mismatch");
_Static_assert(offsetof(R4NakRequest, deadline_ns) == 48u, "R4NakRequest.deadline_ns offset mismatch");
_Static_assert(offsetof(R4NakRequest, code) == 56u, "R4NakRequest.code offset mismatch");
_Static_assert(offsetof(R4NakRequest, code_capacity) == 64u, "R4NakRequest.code_capacity offset mismatch");
_Static_assert(offsetof(R4NakRequest, log) == 72u, "R4NakRequest.log offset mismatch");
_Static_assert(offsetof(R4NakRequest, log_capacity) == 80u, "R4NakRequest.log_capacity offset mismatch");

typedef struct R4NakBinary {
    uint32_t version;
    uint32_t size;
    int32_t status;
    uint32_t sm;
    uint32_t stage;
    uint32_t gprs;
    uint32_t code_bytes;
    uint32_t instructions;
    uint32_t slm_bytes;
    uint32_t crs_bytes;
    uint32_t control_barriers;
    uint32_t max_warps;
    R4NakHeader header;
    uint64_t peak_bytes;
    uint64_t elapsed_ns;
    uint64_t log_length;
    R4NakDigest source_hash;
} R4NakBinary;
_Static_assert(sizeof(R4NakBinary) == 232u, "R4NakBinary size mismatch");
_Static_assert(offsetof(R4NakBinary, version) == 0u, "R4NakBinary.version offset mismatch");
_Static_assert(offsetof(R4NakBinary, size) == 4u, "R4NakBinary.size offset mismatch");
_Static_assert(offsetof(R4NakBinary, status) == 8u, "R4NakBinary.status offset mismatch");
_Static_assert(offsetof(R4NakBinary, sm) == 12u, "R4NakBinary.sm offset mismatch");
_Static_assert(offsetof(R4NakBinary, stage) == 16u, "R4NakBinary.stage offset mismatch");
_Static_assert(offsetof(R4NakBinary, gprs) == 20u, "R4NakBinary.gprs offset mismatch");
_Static_assert(offsetof(R4NakBinary, code_bytes) == 24u, "R4NakBinary.code_bytes offset mismatch");
_Static_assert(offsetof(R4NakBinary, instructions) == 28u, "R4NakBinary.instructions offset mismatch");
_Static_assert(offsetof(R4NakBinary, slm_bytes) == 32u, "R4NakBinary.slm_bytes offset mismatch");
_Static_assert(offsetof(R4NakBinary, crs_bytes) == 36u, "R4NakBinary.crs_bytes offset mismatch");
_Static_assert(offsetof(R4NakBinary, control_barriers) == 40u, "R4NakBinary.control_barriers offset mismatch");
_Static_assert(offsetof(R4NakBinary, max_warps) == 44u, "R4NakBinary.max_warps offset mismatch");
_Static_assert(offsetof(R4NakBinary, header) == 48u, "R4NakBinary.header offset mismatch");
_Static_assert(offsetof(R4NakBinary, peak_bytes) == 176u, "R4NakBinary.peak_bytes offset mismatch");
_Static_assert(offsetof(R4NakBinary, elapsed_ns) == 184u, "R4NakBinary.elapsed_ns offset mismatch");
_Static_assert(offsetof(R4NakBinary, log_length) == 192u, "R4NakBinary.log_length offset mismatch");
_Static_assert(offsetof(R4NakBinary, source_hash) == 200u, "R4NakBinary.source_hash offset mismatch");

typedef struct R4NakCacheKey {
    uint32_t version;
    uint32_t size;
    uint32_t vendor_id;
    uint32_t device_id;
    uint32_t chipset;
    uint32_t sm;
    uint32_t stage;
    uint32_t driver_version;
    uint32_t command_abi;
    uint32_t resource_abi;
    uint32_t constants_abi;
    uint32_t format;
    uint64_t device_generation;
    uint64_t reset_generation;
    uint64_t pipeline_layout;
    R4NakDigest source_hash;
    R4NakDigest pipeline_hash;
} R4NakCacheKey;
_Static_assert(sizeof(R4NakCacheKey) == 136u, "R4NakCacheKey size mismatch");
_Static_assert(offsetof(R4NakCacheKey, version) == 0u, "R4NakCacheKey.version offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, size) == 4u, "R4NakCacheKey.size offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, vendor_id) == 8u, "R4NakCacheKey.vendor_id offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, device_id) == 12u, "R4NakCacheKey.device_id offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, chipset) == 16u, "R4NakCacheKey.chipset offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, sm) == 20u, "R4NakCacheKey.sm offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, stage) == 24u, "R4NakCacheKey.stage offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, driver_version) == 28u, "R4NakCacheKey.driver_version offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, command_abi) == 32u, "R4NakCacheKey.command_abi offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, resource_abi) == 36u, "R4NakCacheKey.resource_abi offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, constants_abi) == 40u, "R4NakCacheKey.constants_abi offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, format) == 44u, "R4NakCacheKey.format offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, device_generation) == 48u, "R4NakCacheKey.device_generation offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, reset_generation) == 56u, "R4NakCacheKey.reset_generation offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, pipeline_layout) == 64u, "R4NakCacheKey.pipeline_layout offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, source_hash) == 72u, "R4NakCacheKey.source_hash offset mismatch");
_Static_assert(offsetof(R4NakCacheKey, pipeline_hash) == 104u, "R4NakCacheKey.pipeline_hash offset mismatch");

typedef struct R4NakFormat {
    uint32_t version;
    uint32_t size;
    uint32_t format;
    uint32_t block_bits;
    uint32_t block_width;
    uint32_t block_height;
    uint32_t channels;
    uint32_t is_float;
    uint32_t is_unorm;
    uint32_t is_srgb;
} R4NakFormat;
_Static_assert(sizeof(R4NakFormat) == 40u, "R4NakFormat size mismatch");
_Static_assert(offsetof(R4NakFormat, version) == 0u, "R4NakFormat.version offset mismatch");
_Static_assert(offsetof(R4NakFormat, size) == 4u, "R4NakFormat.size offset mismatch");
_Static_assert(offsetof(R4NakFormat, format) == 8u, "R4NakFormat.format offset mismatch");
_Static_assert(offsetof(R4NakFormat, block_bits) == 12u, "R4NakFormat.block_bits offset mismatch");
_Static_assert(offsetof(R4NakFormat, block_width) == 16u, "R4NakFormat.block_width offset mismatch");
_Static_assert(offsetof(R4NakFormat, block_height) == 20u, "R4NakFormat.block_height offset mismatch");
_Static_assert(offsetof(R4NakFormat, channels) == 24u, "R4NakFormat.channels offset mismatch");
_Static_assert(offsetof(R4NakFormat, is_float) == 28u, "R4NakFormat.is_float offset mismatch");
_Static_assert(offsetof(R4NakFormat, is_unorm) == 32u, "R4NakFormat.is_unorm offset mismatch");
_Static_assert(offsetof(R4NakFormat, is_srgb) == 36u, "R4NakFormat.is_srgb offset mismatch");

#define R4NAK_COMPILER_REVISION ((uint32_t)1)
#define R4NAK_STATUS_OK ((int32_t)0)
#define R4NAK_STATUS_INVALID ((int32_t)-1)
#define R4NAK_STATUS_UNSUPPORTED ((int32_t)-2)
#define R4NAK_STATUS_CAPACITY ((int32_t)-3)
#define R4NAK_STATUS_CACHE_MISS ((int32_t)-4)
#define R4NAK_STATUS_BUSY ((int32_t)-5)
#define R4NAK_STATUS_MEMORY ((int32_t)-6)
#define R4NAK_STATUS_COMPILER ((int32_t)-7)
#define R4NAK_STATUS_CANCELLED ((int32_t)-8)

#define R4NAK_COMPILER_V1_EXPORT_NAME "COMPILER_V1"
#define R4NAK_COMPILER_V1_ABI_MAJOR 1u
#define R4NAK_COMPILER_V1_REVISION 1u
#define R4NAK_COMPILER_V1_INTERFACE_ID_LO 0x52344e414b434f4dull
#define R4NAK_COMPILER_V1_INTERFACE_ID_HI 0x50494c4552303031ull
#define R4NAK_COMPILER_V1_TABLE_SIZE 64u
#define R4NAK_COMPILER_V1_HEADER_INITIALIZER { R4L_INTERFACE_MAGIC, R4L_INTERFACE_HEADER_VERSION, 0u, R4NAK_COMPILER_V1_TABLE_SIZE, R4NAK_COMPILER_V1_ABI_MAJOR, R4NAK_COMPILER_V1_REVISION, R4NAK_COMPILER_V1_INTERFACE_ID_LO, R4NAK_COMPILER_V1_INTERFACE_ID_HI }
typedef int32_t (*R4NakCompilerV1CompileFn)(const R4NakRuntime * runtime, const R4NakRequest * request, R4NakBinary * output);
typedef int32_t (*R4NakCompilerV1CacheWriteFn)(const R4NakCacheKey * key, const R4NakBinary * binary, const uint8_t * code, uint64_t code_length, uint8_t * bytes, uint64_t capacity, uint64_t * written);
typedef int32_t (*R4NakCompilerV1CacheReadFn)(const R4NakCacheKey * key, const uint8_t * bytes, uint64_t length, R4NakBinary * output, uint8_t * code, uint64_t capacity);
typedef int32_t (*R4NakCompilerV1FormatInfoFn)(uint32_t format, R4NakFormat * output);
typedef struct R4NakCompilerV1 {
    R4LInterfaceHeader header;
    R4NakCompilerV1CompileFn compile;
    R4NakCompilerV1CacheWriteFn cache_write;
    R4NakCompilerV1CacheReadFn cache_read;
    R4NakCompilerV1FormatInfoFn format_info;
} R4NakCompilerV1;
_Static_assert(sizeof(R4NakCompilerV1) == 64u, "R4NakCompilerV1 size mismatch");
_Static_assert(offsetof(R4NakCompilerV1, compile) == 32u, "R4NakCompilerV1.compile offset mismatch");
_Static_assert(offsetof(R4NakCompilerV1, cache_write) == 40u, "R4NakCompilerV1.cache_write offset mismatch");
_Static_assert(offsetof(R4NakCompilerV1, cache_read) == 48u, "R4NakCompilerV1.cache_read offset mismatch");
_Static_assert(offsetof(R4NakCompilerV1, format_info) == 56u, "R4NakCompilerV1.format_info offset mismatch");
typedef struct R4NakCompilerV1Client { const R4LInterfaceHeader *header; } R4NakCompilerV1Client;

static inline int32_t r4nak_compiler_v1_init(const R4XStartContext *ctx, R4NakCompilerV1Client *out_client) {
    if (out_client == 0) return R4L_BINDING_INVALID_EXPECTATION;
    out_client->header = 0;
    const R4XStartImport *item = r4xstart_find_import_named(ctx, "R4NAK", "COMPILER_V1");
    const R4LInterfaceExpectation expected = { 0x52344e414b434f4dull, 0x50494c4552303031ull, 1u, 1u, 64u, 0u, 0u };
    const R4LInterfaceHeader *header = 0;
    int32_t status = r4l_validate_import(item, &expected, &header);
    if (status != R4L_BINDING_OK) return status;
    if (r4l_slot_address(header, 32u) == 0) return R4L_BINDING_TABLE_TOO_SMALL;
    if (r4l_slot_address(header, 40u) == 0) return R4L_BINDING_TABLE_TOO_SMALL;
    if (r4l_slot_address(header, 48u) == 0) return R4L_BINDING_TABLE_TOO_SMALL;
    if (r4l_slot_address(header, 56u) == 0) return R4L_BINDING_TABLE_TOO_SMALL;
    out_client->header = header;
    return R4L_BINDING_OK;
}

static inline int32_t r4nak_compile(R4NakCompilerV1Client *client, const R4NakRuntime * runtime, const R4NakRequest * request, R4NakBinary * output) {
    R4NakCompilerV1CompileFn function = (R4NakCompilerV1CompileFn)r4l_slot_address(client->header, 32u);
    return function(runtime, request, output);
}

static inline int32_t r4nak_cache_write(R4NakCompilerV1Client *client, const R4NakCacheKey * key, const R4NakBinary * binary, const uint8_t * code, uint64_t code_length, uint8_t * bytes, uint64_t capacity, uint64_t * written) {
    R4NakCompilerV1CacheWriteFn function = (R4NakCompilerV1CacheWriteFn)r4l_slot_address(client->header, 40u);
    return function(key, binary, code, code_length, bytes, capacity, written);
}

static inline int32_t r4nak_cache_read(R4NakCompilerV1Client *client, const R4NakCacheKey * key, const uint8_t * bytes, uint64_t length, R4NakBinary * output, uint8_t * code, uint64_t capacity) {
    R4NakCompilerV1CacheReadFn function = (R4NakCompilerV1CacheReadFn)r4l_slot_address(client->header, 48u);
    return function(key, bytes, length, output, code, capacity);
}

static inline int32_t r4nak_format_info(R4NakCompilerV1Client *client, uint32_t format, R4NakFormat * output) {
    R4NakCompilerV1FormatInfoFn function = (R4NakCompilerV1FormatInfoFn)r4l_slot_address(client->header, 56u);
    return function(format, output);
}

#endif