R4NAK/Contract/Generated/implementation_abi.zig

// Generated by R4LContractGen. Do not edit.
const r4os = @import("r4os");

pub const InterfaceHeader = r4os.runtime_r4l.InterfaceHeader;

pub const module_name = "R4NAK";

pub const R4NakHeader = extern struct {
    w0: u32,
    w1: u32,
    w2: u32,
    w3: u32,
    w4: u32,
    w5: u32,
    w6: u32,
    w7: u32,
    w8: u32,
    w9: u32,
    w10: u32,
    w11: u32,
    w12: u32,
    w13: u32,
    w14: u32,
    w15: u32,
    w16: u32,
    w17: u32,
    w18: u32,
    w19: u32,
    w20: u32,
    w21: u32,
    w22: u32,
    w23: u32,
    w24: u32,
    w25: u32,
    w26: u32,
    w27: u32,
    w28: u32,
    w29: u32,
    w30: u32,
    w31: u32,
};

pub const R4NakDigest = extern struct {
    h0: u64,
    h1: u64,
    h2: u64,
    h3: u64,
};

pub const R4NakRuntime = extern struct {
    version: u32,
    size: u32,
    user: u64,
    owner_generation: u64,
    allocate: u64,
    release: u64,
    clock_ns: u64,
    abort_worker: u64,
    owner_retired: u64,
    cancelled: u64,
};

pub const R4NakRequest = extern struct {
    version: u32,
    size: u32,
    words: u64,
    word_count: u32,
    stage: u32,
    sm: u32,
    entry_length: u32,
    entry: u64,
    budget_bytes: u64,
    deadline_ns: u64,
    code: u64,
    code_capacity: u64,
    log: u64,
    log_capacity: u64,
};

pub const R4NakBinary = extern struct {
    version: u32,
    size: u32,
    status: i32,
    sm: u32,
    stage: u32,
    gprs: u32,
    code_bytes: u32,
    instructions: u32,
    slm_bytes: u32,
    crs_bytes: u32,
    control_barriers: u32,
    max_warps: u32,
    header: R4NakHeader,
    peak_bytes: u64,
    elapsed_ns: u64,
    log_length: u64,
    source_hash: R4NakDigest,
};

pub const R4NakCacheKey = extern struct {
    version: u32,
    size: u32,
    vendor_id: u32,
    device_id: u32,
    chipset: u32,
    sm: u32,
    stage: u32,
    driver_version: u32,
    command_abi: u32,
    resource_abi: u32,
    constants_abi: u32,
    format: u32,
    device_generation: u64,
    reset_generation: u64,
    pipeline_layout: u64,
    source_hash: R4NakDigest,
    pipeline_hash: R4NakDigest,
};

pub const R4NakFormat = extern struct {
    version: u32,
    size: u32,
    format: u32,
    block_bits: u32,
    block_width: u32,
    block_height: u32,
    channels: u32,
    is_float: u32,
    is_unorm: u32,
    is_srgb: u32,
};
pub const compiler_revision: u32 = 1;
pub const status_ok: i32 = 0;
pub const status_invalid: i32 = -1;
pub const status_unsupported: i32 = -2;
pub const status_capacity: i32 = -3;
pub const status_cache_miss: i32 = -4;
pub const status_busy: i32 = -5;
pub const status_memory: i32 = -6;
pub const status_compiler: i32 = -7;
pub const status_cancelled: i32 = -8;

pub const compiler_v1_export_name = "COMPILER_V1";
pub const compiler_v1_revision: u16 = 1;
pub const compiler_v1_header = InterfaceHeader{
    .magic = r4os.runtime_r4l.interface_magic,
    .header_version = r4os.runtime_r4l.interface_header_version,
    .flags = 0,
    .size = 64,
    .abi_major = 1,
    .abi_minor = 1,
    .interface_id_lo = 0x52344e414b434f4d,
    .interface_id_hi = 0x50494c4552303031,
};
pub const CompilerV1CompileFn = *const fn (runtime: *const R4NakRuntime, request: *const R4NakRequest, output: *R4NakBinary) callconv(.c) i32;
pub const CompilerV1CacheWriteFn = *const fn (key: *const R4NakCacheKey, binary: *const R4NakBinary, code: [*]const u8, code_length: u64, bytes: [*]u8, capacity: u64, written: *u64) callconv(.c) i32;
pub const CompilerV1CacheReadFn = *const fn (key: *const R4NakCacheKey, bytes: [*]const u8, length: u64, output: *R4NakBinary, code: [*]u8, capacity: u64) callconv(.c) i32;
pub const CompilerV1FormatInfoFn = *const fn (format: u32, output: *R4NakFormat) callconv(.c) i32;
pub const CompilerV1 = extern struct {
    header: InterfaceHeader,
    compile: CompilerV1CompileFn,
    cache_write: CompilerV1CacheWriteFn,
    cache_read: CompilerV1CacheReadFn,
    format_info: CompilerV1FormatInfoFn,
};
